# tsundoku

./: CMakeLists.txt  PROFILING.md  README.md  compile_commands.json  flake.nix
.cache/clangd/index/: camera.cpp.17A27E0CB3483DA4.idx  camera.h.44AFF6F3DDCA1B86.idx  camera.h.5A3AE0E52396DBF6.idx  camera.h.C841A4285365CFDD.idx  camera_vulkan.h.3105DA668D7B3FD0.idx  commandbuffer.cpp.26FC54E22775070B.idx  commandbuffer.h.0663EC46AE465AFA.idx  commandbuffer.h.9D7902209ECDA178.idx  common.h.4AA27BA719E6B57D.idx  common.h.6DA6D3CBD30546FF.idx  descriptor_set.cpp.7A6A48068264E545.idx  descriptor_set.h.48476792B3725471.idx  descriptor_set.h.5CC45089D581C660.idx  entity.h.4D3330EADBB4C3E1.idx  frame_cap.cpp.B6FA12623339BC2F.idx  frame_cap.h.5B0989D842E178DD.idx  frame_cap.h.C5D709E8052023DA.idx  framebuffer.cpp.06DA67BA9EBB9350.idx  framebuffer.h.A1CB6288CD7656E8.idx  framebuffer.h.B032131AC4374E62.idx  main.cpp.695B80A6CF5C6A06.idx  main.cpp.CB13CC6805ECE057.idx  pipeline.cpp.CCAC668EFD72AC89.idx  pipeline.h.A4E8D3A27BEBACC4.idx  pipeline.h.F8DC285EC8285DB8.idx  platform.cpp.7BA34AC8A2816042.idx  platform.h.507CA5F0C1B9603E.idx  platform.h.B42E7535E06AEFCF.idx  render.cpp.D96A8C466585B279.idx  render.h.6116DC5D3B616CCC.idx  render.h.9A43EC5AD1550471.idx  render_pass.cpp.D7D025E0AC6DFEA1.idx  render_pass.h.24790269BE8F4046.idx  render_pass.h.4F7DA12A193E6E59.idx  render_system.h.85626162C71CA492.idx  scene.h.3FEB35E53D7A296E.idx  swapchain.cpp.6F6A2B559AE817E1.idx  swapchain.h.A0B1A7925033E2E1.idx  swapchain.h.B7E325867EB14DC2.idx  sync.cpp.66BEEE24C715C7B7.idx  (+8 more)
src/: main.cpp
src/assets/: model_loader.cpp  model_loader.h  texture_loader.cpp  texture_loader.h
src/assets/shaders/: frag.glsl  vert.glsl
src/components/: camera.cpp  camera.h  model.cpp  model.h
src/core/: common.h  entity.cpp  entity.h  platform.cpp  platform.h  scene.cpp  scene.h
src/renderer/: camera_vulkan.cpp  camera_vulkan.h  model_vulkan.cpp  model_vulkan.h
src/vulkan/: buffer.cpp  buffer.h  commandbuffer.cpp  commandbuffer.h  descriptor_set.cpp  descriptor_set.h  frame_cap.cpp  frame_cap.h  framebuffer.cpp  framebuffer.h  pipeline.cpp  pipeline.h  render_pass.cpp  render_pass.h  render_system.cpp  render_system.h  swapchain.cpp  swapchain.h  sync.cpp  sync.h  vertex_buffer.cpp  vertex_buffer.h  vk_context.cpp  vk_context.h
